--- a/data_preprocessing_tools.ipynb
+++ b/data_preprocessing_tools.ipynb
@@ -50,7 +50,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,30 +72,73 @@
         "X = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, -1].values"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hCsz2yCebe1R"
+        "id": "hCsz2yCebe1R",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "37062073-7e22-4577-ef2e-6b0963bc2c00"
       },
       "source": [
         "print(X)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['France' 44.0 72000.0]\n",
+            " ['Spain' 27.0 48000.0]\n",
+            " ['Germany' 30.0 54000.0]\n",
+            " ['Spain' 38.0 61000.0]\n",
+            " ['Germany' 40.0 nan]\n",
+            " ['France' 35.0 58000.0]\n",
+            " ['Spain' nan 52000.0]\n",
+            " ['France' 48.0 79000.0]\n",
+            " ['Germany' 50.0 83000.0]\n",
+            " ['France' 37.0 67000.0]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eYrOQ43XcJR3"
+        "id": "eYrOQ43XcJR3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4dc30022-4dc1-4372-c919-e66cbc0f1391"
       },
       "source": [
         "print(y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0     No\n",
+            "1    Yes\n",
+            "2     No\n",
+            "3     No\n",
+            "4    Yes\n",
+            "5    Yes\n",
+            "6     No\n",
+            "7    Yes\n",
+            "8     No\n",
+            "9    Yes\n",
+            "Name: Purchased, dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -117,19 +160,40 @@
         "imputer.fit(X[:, 1:3])\n",
         "X[:, 1:3] = imputer.transform(X[:, 1:3])"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3UgLdMS_bjq_"
+        "id": "3UgLdMS_bjq_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7bc1b616-5aa7-496b-fa4e-62fdf0415698"
       },
       "source": [
         "print(X)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['France' 44.0 72000.0]\n",
+            " ['Spain' 27.0 48000.0]\n",
+            " ['Germany' 30.0 54000.0]\n",
+            " ['Spain' 38.0 61000.0]\n",
+            " ['Germany' 40.0 63777.77777777778]\n",
+            " ['France' 35.0 58000.0]\n",
+            " ['Spain' 38.77777777777778 52000.0]\n",
+            " ['France' 48.0 79000.0]\n",
+            " ['Germany' 50.0 83000.0]\n",
+            " ['France' 37.0 67000.0]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -160,7 +224,7 @@
         "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0])], remainder='passthrough')\n",
         "X = np.array(ct.fit_transform(X))"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -182,19 +246,6 @@
       "source": [
         "### Encoding the Dependent Variable"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XgHCShVyTOYY"
-      },
-      "source": [
-        "from sklearn.preprocessing import LabelEncoder\n",
-        "le = LabelEncoder()\n",
-        "y = le.fit_transform(y)"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -225,52 +276,34 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 1)"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "GuwQhFdKrYTM"
-      },
       "source": [
-        "print(X_train)"
+        "y_test"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
-        "id": "TUrX_Tvcrbi4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qm9Ig48h0xGe",
+        "outputId": "75ce5cc4-6bc6-4286-f347-d2b5d14bb967"
       },
-      "source": [
-        "print(X_test)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pSMHiIsWreQY"
-      },
-      "source": [
-        "print(y_train)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "I_tW7H56rgtW"
-      },
-      "source": [
-        "print(y_test)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['No', 'Yes'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -292,30 +325,62 @@
         "X_train = sc.fit_transform(X_train)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DWPET8ZdlMnu"
+        "id": "DWPET8ZdlMnu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "af8113d0-a14a-47e0-d767-5b87abff4caf"
       },
       "source": [
         "print(X_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-0.77459667 -0.57735027  1.29099445 -0.19159184 -1.07812594]\n",
+            " [-0.77459667  1.73205081 -0.77459667 -0.01411729 -0.07013168]\n",
+            " [ 1.29099445 -0.57735027 -0.77459667  0.56670851  0.63356243]\n",
+            " [-0.77459667 -0.57735027  1.29099445 -0.30453019 -0.30786617]\n",
+            " [-0.77459667 -0.57735027  1.29099445 -1.90180114 -1.42046362]\n",
+            " [ 1.29099445 -0.57735027 -0.77459667  1.14753431  1.23265336]\n",
+            " [-0.77459667  1.73205081 -0.77459667  1.43794721  1.57499104]\n",
+            " [ 1.29099445 -0.57735027 -0.77459667 -0.74014954 -0.56461943]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sTXykB_QlRjE"
+        "id": "sTXykB_QlRjE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39f1c134-dbe1-4f1a-8dcf-88cb3182536c"
       },
       "source": [
         "print(X_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-0.77459667  1.73205081 -0.77459667 -1.46618179 -0.9069571 ]\n",
+            " [ 1.29099445 -0.57735027 -0.77459667 -0.44973664  0.20564034]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
