--- a/multiple_linear_regression.ipynb
+++ b/multiple_linear_regression.ipynb
@@ -50,7 +50,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "X = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, -1].values"
       ],
-      "execution_count": 2,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -82,12 +82,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c90eea1c-4e2d-4779-b012-eee1ac1c3ac0"
+        "outputId": "f777852d-7091-46fd-b25c-82a633cf5dee"
       },
       "source": [
         "print(X)"
       ],
-      "execution_count": 3,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,48 +162,31 @@
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
         "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [3])], remainder='passthrough')\n",
-        "X = ct.fit_transform(X)\n"
+        "X = np.array(ct.fit_transform(X))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        },
-        "id": "bdOXAqrFXCZ0",
-        "outputId": "5fcd4734-040d-43df-fe78-4c077cc22aed"
+        "id": "bdOXAqrFXCZ0"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'ColumnTransformer' object has no attribute 'fit_transforms'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-1f1c5015f0fb>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOneHotEncoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColumnTransformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransformers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'encoder'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mOneHotEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mremainder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'passthrough'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transforms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'ColumnTransformer' object has no attribute 'fit_transforms'"
-          ]
-        }
-      ]
+      "execution_count": 28,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4ym3HdYeCGYG",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 857
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ce09e670-cf06-4a1c-f5b0-89422aae0496"
+        "outputId": "9972eced-088b-4fa0-b1d2-24989d190126"
       },
       "source": [
         "print(X)"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[0.0 0.0 1.0 165349.2 136897.8 471784.1]\n",
             " [1.0 0.0 0.0 162597.7 151377.59 443898.53]\n",
@@ -255,8 +238,7 @@
             " [1.0 0.0 0.0 0.0 135426.92 0.0]\n",
             " [0.0 0.0 1.0 542.05 51743.15 0.0]\n",
             " [1.0 0.0 0.0 0.0 116983.8 45173.06]]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -278,7 +260,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -296,28 +278,29 @@
         "id": "ywPjx0L1BMiD",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 75
         },
-        "outputId": "099836bc-4d85-4b4f-a488-093faf02e8cb"
+        "outputId": "63857e72-465f-43c0-a7d7-f164034505a3"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regressor = LinearRegression()\n",
         "regressor.fit(X_train, y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+              "LinearRegression()"
+            ],
+            "text/html": [
+              "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
+          "metadata": {},
+          "execution_count": 31
         }
       ]
     },
@@ -335,20 +318,20 @@
       "metadata": {
         "id": "TQKmwvtdBkyb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 185
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "493436bf-a4ae-4374-ca16-0b0c25d19457"
+        "outputId": "06460761-8d37-47fb-d130-27e3f2f29b36"
       },
       "source": [
         "y_pred = regressor.predict(X_test)\n",
         "np.set_printoptions(precision=2)\n",
         "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[103015.2  103282.38]\n",
             " [132582.28 144259.4 ]\n",
@@ -360,8 +343,7 @@
             " [ 98791.73  97483.56]\n",
             " [113969.44 110352.25]\n",
             " [167921.07 166187.94]]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     }
